--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,51 @@ header .menu a:hover {
 }
 
 /* FOOTER */
+
+/* Contact data */
 .contact {
   display: flex;
+  background-color: var(--secondary);
+  color: var(--white);
+}
+
+.contact .contact-column {
+  width: 50%;
+  padding: 20px;
+}
+
+.contact .contact-data {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  font-size: 18px;
+}
+
+@media (max-width: 420px) {
+  .contact {
+    flex-direction: column;
+  }
+  .contact .contact-column {
+    width: 100%;
+  } 
+}
+
+/* Form */
+.contact-form input[type=text],
+.contact-form input[type=e-mail],
+.contact-form textarea {
+  width: 100%;
+}
+
+.contact-form input[type=submit] {
+  -webkit-appearance: none;
+  background-color: white;
+  border: none;
+  padding: 2px 15px;
+  color: var(--secondary);
+  font-weight: 500;
+}
+.contact-form .form-header {
+  font-size: 20px;
 }
