--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ header .menu {
   display: flex;
   justify-content: center;
   padding: 0;
+  margin: 0;
   background-color: var(--secondary);
   font-family: 'Open Sans', Helvetica, Arial, sans-serif;
   font-weight: bold;
@@ -97,3 +98,18 @@ header .menu a:hover {
 .contact-form .form-header {
   font-size: 20px;
 }
+
+/*PAGES*/
+
+/*About me*/ 
+.about-me-picture {
+  width: 100%;
+  height: 300px;
+  background-image: url("img/background.jpg");
+  background-size: cover;
+}
+
+.about-me-description {
+
+}
+
