--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,13 @@ body {
   background-color: white;
 }
 
+h1.content-title {
+  width: 100%;
+  color: var(--secondary);
+  text-align: center;
+  margin: 10px;
+}
+
 /* HEADER */
 header .menu {
   display: flex;
@@ -219,6 +226,33 @@ header .menu a:hover {
     padding: 10px;
   }
   .skills-item {
+    width: 100%;
+  }
+}
+
+/*Projects*/
+
+.projects {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.project {
+  box-sizing: border-box;
+  width: 50%;
+  padding: 30px 20px;
+}
+
+.project img {
+  max-width: 100%;
+}
+
+@media (max-width: 420px) {
+  .projects {
+    flex-direction: column;
+    flex-wrap: nowrap;
+  }
+  .project {
     width: 100%;
   }
 }
